--- a/src/main/resources/public/csm/assets/css/style.css
+++ b/src/main/resources/public/csm/assets/css/style.css
@@ -20,11 +20,10 @@ label {
 
 /* Header */
 #head {
-    background: #181015 url( ../images/bg_header.jpg) no-repeat;
     background-size: cover;
-    min-height: 520px;
+    min-height: 400px;
     text-align: center;
-    padding-top: 240px;
+    padding-top: 100px;
     color: white;
     font-family: "Open sans", Helvetica, Arial;
     font-weight: 300;
@@ -150,7 +149,9 @@ label {
 .jumbotron {
     background-color: #E0E0E0;
 }
-
+.jumbotron.top-space {
+    margin: 10px 190px;
+}
 
 .page-title {
     margin-top: 20px;
@@ -557,6 +558,9 @@ color: #ee0c45;
 }
 .navbar-inverse .navbar-brand img {
     margin-top: -28px;
+}
+.row {
+    margin-bottom: 50px;
 }
 .row.iconColor {
     margin-bottom: 30px;
