--- a/src/main/resources/templates/product-table.html
+++ b/src/main/resources/templates/product-table.html
@@ -68,6 +68,65 @@
         </div>
     </div>
 
+    <div class="am-tab-panel am-fade">
+        <form class="am-form" th:action="@{/back/findProductQuery}" th:object="${product}" th:method="post">
+            <div class="am-g am-margin-top-sm">
+                <div class="am-u-sm-2 am-text-right">
+                    ITEMID
+                </div>
+                <div class="am-u-sm-4 am-u-end">
+                    <input type="text" class="am-input-sm" id="itemId" placeholder="请输入itemId" th:field="*{itemId}"/>
+                </div>
+            </div>
+
+            <div class="am-g am-margin-top-sm">
+                <div class="am-u-sm-2 am-text-right">
+                    CARTRIDGETYPE
+                </div>
+                <div class="am-u-sm-4 am-u-end">
+                    <input type="text" class="am-input-sm" id="suitableMachine" placeholder="请输TYPE" th:field="*{suitableMachine}"/>
+                </div>
+            </div>
+
+            <div class="am-g am-margin-top-sm">
+                <div class="am-u-sm-2 am-text-right">
+                    OEMCODE
+                </div>
+                <div class="am-u-sm-4 am-u-end">
+                    <input type="text" class="am-input-sm" id="oemCode" placeholder="请输author" th:field="*{oemCode}"/>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <!--<form th:action="@{/back/findProductQuery}" th:object="${product}" th:method="post">
+        <div class="form-group">
+            <select id="cartridgeType" th:field="*{cartridgeType}" >
+                <option value="">所有类别</option>
+                <option value="InkCartridge">InkCartridge</option>
+                <option value="TonerCartridge">TonerCartridge</option>
+                <option value="Remanufactured Drum">Remanufactured Drum</option>
+                <option value="EmptyCartridge">EmptyCartridge</option>
+            </select>
+            <label class="col-sm-2 control-label" >itemId</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="itemId" placeholder="请输入itemId" th:field="*{itemId}"/>
+            </div>
+            <label class="col-sm-2 control-label">cartridgeType</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="suitableMachine" placeholder="请输TYPE" th:field="*{suitableMachine}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" >oemCode</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="oemCode" placeholder="请输author" th:field="*{oemCode}"/>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-default" type="submit" placeholder="查询">查询</button>
+            </div>
+        </div>
+    </form>-->
     <div class="am-g">
         <div class="am-u-sm-12">
             <form class="am-form">
@@ -114,52 +173,6 @@
                     </tbody>
                 </table>
                 <div th:include="page :: pager" th:remove="tag"></div>
-                <!--<div class="am-cf">
-                    &lt;!&ndash;共
-                    <text th:text="${datas.totalElements}">15</text>
-                    条记录&ndash;&gt;
-                    <div class="am-fr">
-                        <ul class="am-pagination">
-                            <li><a href="#" th:href="@{${curUrl}(page=0)}">首页</a></li>
-                            <li th:class="${datas.hasPrevious()}? '':'am-disabled'">
-                                <a href="#">«</a></li>
-                            &lt;!&ndash;<li class="am-active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#">»</a></li>&ndash;&gt;
-
-                            &lt;!&ndash;总页数小于等于10&ndash;&gt;
-                            <div th:if="${(datas.totalPages le 10) and (datas.totalPages gt 0)}" th:remove="tag">
-                                <div th:each="pg : ${#numbers.sequence(0, datas.totalPages - 1)}" th:remove="tag">
-                                    <span th:if="${pg eq datas.getNumber()}" th:remove="tag">
-                                        <li class="am-active">
-                                            <span class="current_page line_height" th:text="${pg + 1}">${pageNumber}</span>
-                                        </li>
-                                    </span>
-                                    <span th:unless="${pg eq datas.getNumber()}" th:remove="tag">
-                                        <li><a href="#"  th:text="${pg + 1}"></a></li>
-                                    </span>
-                                </div>
-                            </div>
-
-                            &lt;!&ndash; 总数数大于10时 &ndash;&gt;
-                            <div th:if="${datas.totalPages gt 10}" th:remove="tag">
-                                <li th:if="${datas.number - 2 ge 0}"><a href="#"  th:text="${datas.number - 1}"></a></li>
-                                <li th:if="${datas.number - 1 ge 0}"><a href="#"  th:text="${datas.number}"></a></li>
-                                <li class="am-active"><span class="current_page line_height" th:text="${datas.number + 1}"></span></li>
-                                <li th:if="${datas.number+1 lt datas.totalPages}"><a href="#"  th:text="${datas.number + 2}"></a></li>
-                                <li th:if="${datas.number+2 lt datas.totalPages}"><a href="#"  th:text="${datas.number + 3}"></a></li>
-                            </div>
-
-                            <li th:class="${datas.hasNext()}? '':'am-disabled'">
-                                <a href="#">»</a></li>
-                            <li><a href="#" th:href="${datas.totalPages le 0 ? curUrl+'page=0':curUrl+'&amp;page='+(datas.totalPages - 1)}">尾页</a></li>
-                            <li><span th:utext="'共'+${datas.totalPages}+'页 / '+${datas.totalElements}+' 条'"></span></li>
-                        </ul>
-                    </div>
-                </div>-->
                 <hr/>
                 <p>注：.....</p>
             </form>
