物品查询移动到物品页面

--- a/src/main/resources/templates/product-table.html
+++ b/src/main/resources/templates/product-table.html
@@ -105,7 +105,7 @@
                 <option value="">所有类别</option>
                 <option value="InkCartridge">InkCartridge</option>
                 <option value="TonerCartridge">TonerCartridge</option>
-                <option value="Remanufactured Drum">Remanufactured Drum</option>
+                <option value="DrumCartridge">DrumCartridge</option>
                 <option value="EmptyCartridge">EmptyCartridge</option>
             </select>
             <label class="col-sm-2 control-label" >itemId</label>
