修改了首页产品分类的样式

--- a/src/main/resources/public/csm/assets/css/style.css
+++ b/src/main/resources/public/csm/assets/css/style.css
@@ -147,10 +147,10 @@ label {
 }
 
 .jumbotron {
-    background-color: #E0E0E0;
+    background-color: #ffffff;
 }
 .jumbotron.top-space {
-    margin: 10px 190px;
+    margin: 10px auto;
 }
 
 .page-title {
