product管理系统功能实现

--- a/src/main/resources/templates/product-table.html
+++ b/src/main/resources/templates/product-table.html
@@ -26,148 +26,97 @@
 <div class="admin-content">
 
     <div class="am-cf am-padding">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">产品列表</strong> /
-            <small>Table</small>
-        </div>
-    </div>
-
-    <div class="am-g">
-        <div class="am-u-md-6 am-cf">
-            <div class="am-fl am-cf">
-                <div class="am-btn-toolbar am-fl">
-                    <div class="am-btn-group am-btn-group-xs">
-                        <button type="button" class="am-btn am-btn-default"><span class="am-icon-plus"></span> 新增
-                        </button>
-                        <button type="button" class="am-btn am-btn-default"><span class="am-icon-trash-o"></span> 删除
-                        </button>
-                    </div>
-
-                    <div class="am-form-group am-margin-left am-fl">
-                        <select>
-                            <option value="option1">所有类别</option>
-                            <option value="option2">IT业界</option>
-                            <option value="option3">数码产品</option>
-                            <option value="option3">笔记本电脑</option>
-                            <option value="option3">平板电脑</option>
-                            <option value="option3">只能手机</option>
-                            <option value="option3">超极本</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="am-u-md-3 am-cf">
-            <div class="am-fr">
-                <div class="am-input-group am-input-group-sm">
-                    <input type="text" class="am-form-field">
-                    <span class="am-input-group-btn">
-                  <button class="am-btn am-btn-default" type="button">搜索</button>
-                </span>
-                </div>
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">产品列表</strong>/
+            <div class="am-btn-group am-btn-group-xs">
+                <button id="add" type="button" class="am-btn am-btn-default" onclick="addRow()"><span class="am-icon-plus"></span> 新增
+                </button>
+                <button id="delete" type="button" class="am-btn am-btn-default" onclick="batchDelete()"><span class="am-icon-trash-o"></span> 删除
+                </button>
             </div>
         </div>
     </div>
-
-    <div class="am-tab-panel am-fade">
-        <form class="am-form" th:action="@{/back/findProductQuery}" th:object="${product}" th:method="post">
-            <div class="am-g am-margin-top-sm">
-                <div class="am-u-sm-2 am-text-right">
-                    ITEMID
-                </div>
-                <div class="am-u-sm-4 am-u-end">
-                    <input type="text" class="am-input-sm" id="itemId" placeholder="请输入itemId" th:field="*{itemId}"/>
-                </div>
-            </div>
-
-            <div class="am-g am-margin-top-sm">
-                <div class="am-u-sm-2 am-text-right">
-                    CARTRIDGETYPE
-                </div>
-                <div class="am-u-sm-4 am-u-end">
-                    <input type="text" class="am-input-sm" id="suitableMachine" placeholder="请输TYPE" th:field="*{suitableMachine}"/>
-                </div>
-            </div>
-
-            <div class="am-g am-margin-top-sm">
-                <div class="am-u-sm-2 am-text-right">
-                    OEMCODE
-                </div>
-                <div class="am-u-sm-4 am-u-end">
-                    <input type="text" class="am-input-sm" id="oemCode" placeholder="请输author" th:field="*{oemCode}"/>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <!--<form th:action="@{/back/findProductQuery}" th:object="${product}" th:method="post">
-        <div class="form-group">
-            <select id="cartridgeType" th:field="*{cartridgeType}" >
-                <option value="">所有类别</option>
-                <option value="InkCartridge">InkCartridge</option>
-                <option value="TonerCartridge">TonerCartridge</option>
-                <option value="DrumCartridge">DrumCartridge</option>
-                <option value="EmptyCartridge">EmptyCartridge</option>
+    <div style="float:left" id="query-form">
+        <div id="toolbar-btn" class="pull-left" style="padding-bottom:10px; float:left;">
+            <select id="cartridgeType">
+                <option value="">全部</option>
+                <option value="InkCartridge"
+                        th:selected="${queryForm.getCartridgeType() == 'InkCartridge'}? 'true':'false'">InkCartridge
+                </option>
+                <option value="TonerCartridge"
+                        th:selected="${queryForm.getCartridgeType() == 'TonerCartridge'}? 'true':'false'">TonerCartridge
+                </option>
+                <option value="DrumCartridge"
+                        th:selected="${queryForm.getCartridgeType() == 'DrumCartridge'}? 'true':'false'">DrumCartridge
+                </option>
+                <option value="EmptyCartridge"
+                        th:selected="${queryForm.getCartridgeType() == 'EmptyCartridge'}? 'true':'false'">EmptyCartridge
+                </option>
             </select>
-            <label class="col-sm-2 control-label" >itemId</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="itemId" placeholder="请输入itemId" th:field="*{itemId}"/>
-            </div>
-            <label class="col-sm-2 control-label">cartridgeType</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="suitableMachine" placeholder="请输TYPE" th:field="*{suitableMachine}"/>
-            </div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label" >oemCode</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="oemCode" placeholder="请输author" th:field="*{oemCode}"/>
+
+        <div class="pull-right" style="padding-bottom:10px; float:left;">
+            <input id="pid" name="pid" placeholder='No.' type="text"
+                   style="float:left;width:150px;margin-right:5px;height:40px;"
+                   class="form-control" th:value="${queryForm.getPid()}">
+            <input id="itemId" name="itemId" placeholder='Item ID' type="text"
+                   style="float:left;width:150px;margin-right:5px;height:40px;"
+                   class="form-control" th:value="${queryForm.getItemId()}">
+            <input id="oemCode" name="oemCode" placeholder='OEM Code' type="text"
+                   style="float:left;width:150px;margin-right:5px;height:40px;"
+                   class="form-control" th:value="${queryForm.getOemCode()}">
+            <input id="suitableMachine" name="suitableMachine" placeholder='Suitable Machine' type="text"
+                   style="float:left;width:150px;margin-right:5px;height:40px;"
+                   class="form-control" th:value="${queryForm.getSuitableMachine()}">
+            <div class="btn-group" style="float:left;">
+                <button id="btn_search" onclick="searchProducts()" type="button" class="am-btn am-btn-default">
+                    <span class="fa fa-search btn-icon-space" aria-hidden="true"></span>
+                    QUERY
+                </button>
+                <button id="btn_reset" onclick="resetSearch()" type="button" class="am-btn am-btn-default">
+                    <span class="fa fa-eraser btn-icon-space" aria-hidden="true"></span>
+                    RESET
+                </button>
             </div>
-            <div class="col-sm-4">
-                <button class="btn btn-default" type="submit" placeholder="查询">查询</button>
-            </div>
+
         </div>
-    </form>-->
+    </div>
+
     <div class="am-g">
         <div class="am-u-sm-12">
             <form class="am-form">
-                <table class="am-table am-table-striped am-table-hover table-main">
+                <table class="am-table am-table-striped am-table-hover table-main"
+                       style="TABLE-LAYOUT:fixed;WORD-BREAK:break-all">
                     <thead>
                     <tr>
-                        <th class="table-check"><input type="checkbox"/></th>
-                        <th class="table-id">ID</th>
-                        <th class="table-title">itemid</th>
-                        <th class="table-type">series</th>
-                        <th class="table-author">oemcode</th>
-                        <th class="table-date">color</th>
-                        <th class="table-set">suitablemachine</th>
-                        <th class="table-set">pageyield</th>
-                        <th class="table-set">itemtype</th>
-                        <th class="table-set">操作</th>
+                        <th class="table-check"><input type="checkbox" onclick="checkAll(this)"/></th>
+                        <th class="table-id" width="12%">No.</th>
+                        <th class="table-title" width="15%">Item ID</th>
+                        <!--<th class="table-type">series</th>-->
+                        <th class="table-author" width="15%">OEM Code</th>
+                        <th class="table-date" width="6%">Color</th>
+                        <th class="table-set" width="19%">Suitable Machine</th>
+                        <th class="table-set" width="10%">Page Yield</th>
+                        <!--<th class="table-set">itemtype</th>-->
+                        <th class="table-set" width="15%">操作</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="tbody">
 
                     <tr th:each="pduct : ${datas.getContent()}">
-                        <td><input type="checkbox"/></td>
-                        <td th:text="${pduct.systemid}">1</td>
-                        <td th:text="${pduct.itemId}">1</td>
-                        <td th:text="${pduct.series}">1</td>
-                        <td th:text="${pduct.oemCode}">1</td>
-                        <td th:text="${pduct.color}">1</td>
-                        <td th:text="${pduct.suitableMachine}">1</td>
-                        <td th:text="${pduct.pageYield}">1</td>
-                        <td th:text="${pduct.itemType}">1</td>
+                        <td><input type="checkbox" name="systemid" th:value="${pduct.systemid}"/></td>
+                        <td><span name="pid" th:text="${pduct.pid}"></span></td>
+                        <td><span name="itemId" th:text="${pduct.itemId}"></span></td>
+                        <td><span name="oemCode" th:text="${pduct.oemCode}"></span></td>
+                        <td><span name="color" th:text="${pduct.color}"></span></td>
+                        <td><span name="suitableMachine" th:text="${pduct.suitableMachine}"></span></td>
+                        <td><span name="pageYield" th:text="${pduct.pageYield}"></span></td>
                         <td>
-                            <div class="am-btn-toolbar">
-                                <div class="am-btn-group am-btn-group-xs">
-                                    <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span
-                                            class="am-icon-pencil-square-o"></span> 编辑
-                                    </button>
-                                    <button class="am-btn am-btn-default am-btn-xs am-text-danger"><span
-                                            class="am-icon-trash-o"></span> 删除
-                                    </button>
-                                </div>
-                            </div>
+                            <button type="button" class="am-btn am-btn-default am-btn-xs am-text-secondary" onclick="modifySingle(this)">
+                                <span class="am-icon-pencil-square-o"></span> 编辑
+                            </button>
+                            <button type="button" class="am-btn am-btn-default am-btn-xs am-text-danger" onclick="deleteSingle(this)">
+                                <span class="am-icon-trash-o"></span> 删除
+                            </button>
                         </td>
                     </tr>
                     </tbody>
@@ -196,5 +145,6 @@
 <script src="/js/amazeui.min.js"></script>
 <!--<![endif]-->
 <script src="/js/app.js"></script>
+<script src="/js/product.js"></script>
 </body>
 </html>
